19990915-00:38 GMT+1 Victor Szel <info@szelvesz.hu>
  * tests/working/sound.prg
    tests/working/*.bat
    tests/working/*.ch
    + CVS header added to all files.
    + @echo off added were missing.

19990915-00:30 GMT+1 Victor Szel <info@szelvesz.hu>
  * (*.* in the root directory)
    + CVS header added to all files.
    + @echo off added were missing.
  * build32.bat
    build40.bat
    build31.bat
    build.bat (renamed)
    build16.bat (new)
    buildrdd.bat (removed)
    bldgt32.bat (removed)
    bldhbpp.bat (removed)
    % These three batch files has been incorporated to the main build
      batch files, since they were simple one-liners.
    ! hbpplib.b32 build process was executed two times from the build32.bat
      and build40.bat files.
    * build.bat renamed to build16.bat

19990914-17:30 GMT+1 Victor Szel <info@szelvesz.hu>
  * config/rules.cf
    * Harbour flag /q changed to /q0 to omit the compiler header.
  * source/rtl/do.c
    ! DO() fixed to use hb_dynsymFind() instead of hb_dynsymGet(), 
      now it properly displays when the passed string is not a symbol, rather
      then throwing an internal error.
  * source/compiler/harbour.y
    + /CREDITS command line switch to display the development team. Like in 
      Clipper.

19990914-13:15 GMT+1 Victor Szel <info@szelvesz.hu>
  * source/compiler/harbour.y
    source/compiler/gen*.c
    + Help screen made more Clipper like.
    + /f switch changed to /gf, and the whole object generation build
      in to the source in a more standard way. It works now.
    + /q0 switch added to the help screen.
    + All filename composing stuff related to specific output types moved to 
      the appropriate gen*.c file. This way the code is more modular.
    ! One variable made static in genobj32.c

19990914-11:40 GMT+1 Victor Szel <info@szelvesz.hu>
  * source/runner/stdalone/external.prg
    include/external.ch
    * Regenerated.
  * source/runner/runlib.c