@@ -47,5 +47,7 @@ void GenJava( PHB_FNAME pFileName )
    hb_fsFNameMerge( szFileName, pFileName );
 
    printf( "\nGenerating Java source output to \'%s\'... ", szFileName );
+   fflush( stdout );
+
    printf( "\nNot implemented yet!\n" );
 }
