@@ -47,5 +47,7 @@ void GenPascal( PHB_FNAME pFileName )
    hb_fsFNameMerge( szFileName, pFileName );
 
    printf( "\nGenerating Pascal source output to \'%s\'... ", szFileName );
+   fflush( stdout );
+
    printf( "\nNot implemented yet!\n" );
 }
